*SVN*

* Fix that FCGIs would leave log files open when asked to shut down by USR2 #3028 [sebastian.kanthak/josh]

* Fixed that dispatcher preparation callbacks only run once in production mode.  Mock Routes.reload so that dispatcher preparation callback tests run. [Rick]

* Fix syntax error in dispatcher than wrecked failsafe responses.  #8625 [mtitorenko]

* Scaffolded validation errors set the appropriate HTTP status for XML responses.  #6946, #8622 [Manfred Stienstra, mmmultiworks]

* Sexy migrations for the session_migration generator.  #8561 [Vladislav]

* Console reload! runs to_prepare callbacks also.  #8393 [f.svehla]

* Generated migrations include timestamps by default.  #8501 [Shane Vitarana]

* Drop Action Web Service from rails:freeze:edge.  [Jeremy Kemper]

* Add db:create, drop, reset, charset, and collation tasks.  #8448 [matt]

* Scaffold generator depends on model generator instead of duplicating it.  #7222 [bscofield]

* Scaffold generator tests.  #8443 [pelle]

* Generated scaffold functional tests use assert_difference.  #8421 [norbert]

* Update to Prototype 1.5.1.  [Sam Stephenson]

* Update to script.aculo.us 1.7.1_beta3.  [Thomas Fuchs]

* Generators use *.html.erb view template naming.  #8278 [Tim Pope]

* Updated resource_scaffold and model generators to use short-hand style migrations [DHH]

* Updated initializer to only load #{RAILS_ENV}.rb once. Added deprecation warning for config.breakpoint_server. [Nicholas Seckar]

* Removed breakpointer and Binding.of_caller in favor of relying on ruby-debug by Kent Sibilev since the breakpointer has been broken since Ruby 1.8.4 and will not be coming back [DHH]

  To use the new debugger, start your server with script/server --debugger and insert a call to  'debugger'
  (instead of 'breakpoint') where you want to jump into the debugger. 
  
  BACKWARDS INCOMPATIBILITY NOTE: You must remove the default line 12 from config/environments/development.rb:
  
    config.breakpoint_server = true
  